RESOLVED FIXED 101590
HitTestResult should not be a HitTestLocation
https://bugs.webkit.org/show_bug.cgi?id=101590
Summary HitTestResult should not be a HitTestLocation
Allan Sandfeld Jensen
Reported 2012-11-08 04:48:15 PST
Currently HitTestResult inherits from HitTestLocation because the two classes used to be one. Conceptually the HitTestResult is not a HitTestLocation though since it representation as a point is merely where the hit test was original started.
Attachments
Patch (6.85 KB, patch)
2012-11-21 02:46 PST, Allan Sandfeld Jensen
no flags
Patch (6.86 KB, patch)
2012-11-21 08:02 PST, Allan Sandfeld Jensen
sam: review+
Allan Sandfeld Jensen
Comment 1 2012-11-21 02:46:17 PST
Allan Sandfeld Jensen
Comment 2 2012-11-21 08:02:50 PST
Ojan Vafai
Comment 3 2012-11-21 09:09:04 PST
Comment on attachment 175449 [details] Patch I don't see the problem with HitTestResult being a HitTestLocation. Is there an eventual goal here that making this change enables?
Allan Sandfeld Jensen
Comment 4 2012-11-21 09:25:12 PST
(In reply to comment #3) > (From update of attachment 175449 [details]) > I don't see the problem with HitTestResult being a HitTestLocation. Is there an eventual goal here that making this change enables? The goal of this patch is only to clean up the code, but for the patch for bug #95204, it will greatly help to be able to be able to change how HitTestResult tracks point data, and which location data it stores. Note HitTestLocation and HitTestResult are already used for very different things. The only reason HitTestResult was kept as a HitTestLocation is because a few hit-test APIs still only take a HitTestResult as an input, and therefore needs to extract the HitTestLocation to begin at from HitTestResult. They can still do that after this change though, in fact they remain unchanged and still use the HitTestResult::hitTestLocation() method.
Allan Sandfeld Jensen
Comment 5 2012-11-26 05:55:07 PST
Note You need to log in before you can comment on or make changes to this bug.